2009-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.999375-23

	* tests/Class+Meth.R (dotestMat): use getClassDef() for speed;
	adaptions to also work with "Matrix-extensions".
	* inst/test-tools.R (checkMatrix): similar adaptions.

2009-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (MatrixClass, l2d_meth, ...): make use of
	MatrixClass(): functionality for setClass("foo", contains="dgCMatrix")

	* src/Mutils.h (Matrix_check_class_and_super): new utility, to be
	used in lieu of  Matrix_check_class() in most cases.
	* src/Tsparse.c, src/cs_utils.c, src/chm_common.c, src/dgCMatrix.c: use it,
	currently only with R_GlobalEnv {otherwise: API change}

2009-03-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/band.Rd: note and example about band(<dense>) |-> dense

	* R/ddenseMatrix.R (.bandDense): fix typo in argument check.
	* R/Csparse.R: ditto
	* src/dense.c (dense_band): limit index range; thanks to Bill Dunlap.
	* tests/Simple.R (band): check it

2009-03-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R (Summary): (dsparseMatrix): new logic, fixing
	prod(<sparse with NA>).

	* inst/test-tools.R (eqDeterminant): improve after suggestions from Doug
	* inst/test-tools.R (checkMatrix): message(), not warning(),
	for differing prod().

	* src/dgeMatrix.h, src/init.c: dgeMatrix_LU(x, warn_singularity)
	* src/dgeMatrix.c (dgeMatrix_LU): allow to suppress singularity warning.
	(dgeMatrix_determinant, dgeMatrix_rcond): do *not* warn on exact singularity

2009-03-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Summary.l, Summary.np): no conversion to "dMatrix" for all()/any()

	* tests/Simple.R: do not use memory-expensive all(I.. == Diagonal(n))
		for R >= 2.9.0, keep option 'warn = 2', i.e. warnings
		producing errors  ==>

	* R/Ops.R: small fixes, getting rid of warnings in tests/Simple.R

	* TODO: think about providing something like  allCompare(.,., "==")
