@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-23
-Date: 2009-03-25
+Date: 2009-03-30
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
